<resources>
    <string name="app_dex_crc">1846606769</string>
    <string name="app_name_cmcc">和对讲</string>
    <string name="app_name_pic">远程定损</string>
    <string name="copyright"></string>
    <string name="copyright_cmcc1">Copyright 2014-2020 中国移动</string>
    <string name="copyright_cmcc2">中国移动 版权所有</string>
    <string name="talk_video_me">我在讲话</string>
    <string name="talk_video_idle">长按开始和管理员对讲</string>
    <string name="talk_video_listen">在讲话</string>
    <string name="talk_app_running">正在运行中...</string>
    <string name="talk_me">我</string>
    <string name="talk_dialog_yes">是</string>
    <string name="talk_dialog_no">否</string>
    <string name="talk_user_title">全体成员</string>
    <string name="talk_group_title">频道</string>
    <string name="talk_session_title">会话</string>
    <string name="talk_user_account_manage">账户管理</string>
    <string name="talk_user_ipocid">用户ID:</string>
    <string name="talk_user_username">名称:</string>
    <string name="talk_user_username_edit">编辑名称</string>
    <string name="talk_user_password">密码</string>
    <string name="talk_user_info_update_name">更改名称</string>
    <string name="talk_user_info_update_name_doing">正在更新...</string>
    <string name="talk_user_info_update_name_error">名称长度需不能超过15</string>
    <string name="talk_user_info_update_name_ok">名称更改成功！</string>
    <string name="talk_user_info_update_name_fail">名称更改失败，请重新尝试！</string>
    <string name="talk_tools">更多</string>
    <string name="talk_tools_infosys">信息采集</string>
    <string name="talk_tools_infosys_null">请下载信息采集系统客户端，下载安装后便可使用！</string>
    <string name="talk_tools_report">现场上报</string>
    <string name="talk_tools_report_continue">继续上传</string>
    <string name="talk_tools_report_high">高清</string>
    <string name="talk_tools_report_compress">压缩</string>
    <string name="talk_tools_report_description">描述</string>
    <string name="talk_tools_report_date">上报时间</string>
    <string name="talk_tools_report_pic">图像上报</string>
    <string name="talk_tools_report_vid">视频上报</string>
    <string name="talk_tools_report_uploading">正在上报..</string>
    <string name="talk_tools_report_waiting">等待上报..</string>
    <string name="talk_tools_report_click">点击重发</string>
    <string name="talk_tools_report_fail">上传失败</string>
    <string name="talk_tools_report_fail_tip">已经保存到本地，建议稍后去更多-上报记录页继续上传</string>
    <string name="talk_tools_report_success">上传成功，可在更多界面查看</string>
    <string name="talk_tools_call_center">调度管理中心</string>
    <string name="talk_tools_call_center_confirm">确定呼叫调度管理中心?</string>
    <string name="talk_tools_call_center_admin">呼调度员</string>
    <string name="talk_tools_call_center_attendence">呼叫坐席</string>
    <string name="talk_tools_session_video_confirm">检测到当前为2G网络，确定进行视频回传吗?</string>
    <string name="talk_tools_session">会话管理</string>
    <string name="talk_tools_channel">频道附着设置</string>
    <string name="talk_tools_setting">设置</string>
    <string name="talk_tools_setting_case">保险案件</string>
    <string name="talk_tools_setting_task">任务派单</string>
    <string name="talk_tools_setting_voice">对讲设置</string>
    <string name="talk_tools_setting_voice_volume">音量</string>
    <string name="talk_tools_setting_voice_listen_mode">收听模式</string>
    <string name="talk_tools_setting_voice_amplifier">声音放大器</string>
    <string name="talk_tools_setting_voice_amplifier_tip">启用放大器可将外放音量适当增大</string>
    <string name="talk_tools_setting_voice_mode_earphone">听筒模式</string>
    <string name="talk_tools_setting_voice_mode_speaker">扬声器模式</string>
    <string name="talk_tools_setting_voice_mode_bluetooth">蓝牙模式</string>
    <string name="talk_tools_setting_answer_mode">自动应答</string>
    <string name="talk_tools_setting_answer_mode_tip">有对讲来电时，将自动应答。</string>
    <string name="talk_tools_setting_isb">免打扰</string>
    <string name="talk_tools_setting_isb_tip">开启此项后，所有的对讲来电将会自动拒接</string>
    <string name="talk_tools_setting_hb">心跳频率</string>
    <string name="talk_tools_setting_hb_tip">越高频率的心跳将耗费更多的电量和流量，但可提升对讲语音通话的性能</string>
    <string name="talk_tools_setting_ptt_click">屏幕PTT按键</string>
    <string name="talk_tools_setting_ptt_click_tip">点击PTT对讲按钮开始对讲，再次点击结束对讲。同时仍支持长按对讲。</string>
    <string name="talk_tools_setting_ptt_volume">音量按键</string>
    <string name="talk_tools_setting_ptt_volume_tip">开启后，按住上下音量键任意一个，即可进行PTT对讲。</string>
    <string name="talk_tools_pwd_update">修改密码</string>
    <string name="talk_tools_pwd_find">找回密码</string>
    <string name="talk_tools_sso">一键登录</string>
    <string name="talk_tools_help">帮助和反馈</string>
    <string name="talk_tools_manual">使用手册</string>
    <string name="talk_tools_defect">意见反馈</string>
    <string name="talk_tools_defect_title">告诉我们您在使用中遇到的问题或宝贵建议：</string>
    <string name="talk_tools_defect_report">反馈</string>
    <string name="talk_tools_defect_report_tip">感谢您的反馈，我们会尽快处理您提出的问题或建议，再次感谢！</string>
    <string name="talk_tools_defect_report_error">网络连接失败，请重新尝试！</string>
    <string name="talk_tools_about">关于版本</string>
    <string name="talk_tools_notice">广播</string>
    <string name="talk_tools_know">知道了</string>
    <string name="talk_tools_notice_comment_tip">输入您的评论</string>
    <string name="talk_tools_notice_comment_send">发表</string>
    <string name="talk_tools_location">位置回传</string>
    <string name="talk_tools_location_tip">打开后，定期回传我的位置信息</string>
    <string name="talk_tools_video">实时视频设置</string>
    <string name="talk_tools_video_quality">清晰度</string>
    <string name="talk_tools_video_quality_tip">清晰度由分辨率、帧率、码率三种参数组成</string>
    <string name="talk_tools_video_rate">分辨率</string>
    <string name="talk_tools_video_rate_tip">分辨率越高，视频越清晰，也越消耗流量。</string>
    <string name="talk_tools_video_fps">帧率</string>
    <string name="talk_tools_video_fps_tip">帧率越高，视频画面越流畅，也越消耗流量。</string>
    <string name="talk_fence_warning_title">告警</string>
    <string name="talk_fence_warning_tip">请注意，您跨越了电子围栏设定的区域！</string>
    <string name="talk_task_dispatch_title">您有新任务</string>
    <string name="talk_session_member">频道成员</string>
    <string name="talk_session_msg">消息</string>
    <string name="talk_session_call">呼叫</string>
    <string name="talk_session_call_title">会话邀请</string>
    <string name="talk_session_call_add">邀请</string>
    <string name="talk_session_call_add_tip">邀请会话成员</string>
    <string name="talk_session_call_cancel">取消</string>
    <string name="talk_click_talk">点击或按住 讲话</string>
    <string name="talk_click_talk_hold">按住讲话</string>
    <string name="talk_click_stop">停止讲话</string>
    <string name="talk_click_applying">申请中...</string>
    <string name="talk_click_releasing">释放中...</string>
    <string name="talk_release_queue">取消排队</string>
    <string name="talk_incoming_accept">接听</string>
    <string name="talk_incoming_reject">拒接</string>
    <string name="talk_incoming_channel_alert_owner_tip">管理员要求进入指定频道，系统已为您自动切换！</string>
    <string name="talk_incoming_channel_alert_tip"> 邀请您进入频道 (%s) 进行通话，是否进入？</string>
    <string name="talk_incoming_channel_alert_send_tip">是否要通知频道内所有在线成员进入会话？</string>
    <string name="talk_incoming_channel_alert_sending">正在通知频道成员...</string>
    <string name="talk_incoming_channel_alert_sent_tip_ok">已通知频道内的所有在线成员进入此会话！</string>
    <string name="talk_incoming_channel_alert_sent_tip_err">通知失败，请重新尝试！</string>
    <string name="talk_incoming_channel_alert_message">呼叫你进入此频道</string>
    <string name="talk_incoming_channel_alert_accept">进入</string>
    <string name="talk_incoming_channel_alert_reject">忽略</string>
    <string name="talk_session_alert_channel">呼入成员</string>
    <string name="talk_session_video_share">视频分享</string>
    <string name="talk_session_video_start">开始录制</string>
    <string name="talk_session_video_stop">结束录制</string>
    <string name="talk_session_video_bye">　挂断　</string>
    <string name="talk_session_video_message">我发起了实时视频</string>
    <string name="talk_session_video_message_time">实时视频时长</string>
    <string name="talk_session_building">正在连接...</string>
    <string name="talk_session_calling">呼叫中...</string>
    <string name="talk_session_end_call">挂断</string>
    <string name="talk_session_idle">状态：空闲</string>
    <string name="talk_user_search_org">所在组织：</string>
    <string name="talk_user_search_org_no">（未分组）</string>
    <string name="talk_user_search_tip">用户ID或名称</string>
    <string name="talk_user_search_key_empty">请输入要搜索的用户ID或名称！</string>
    <string name="talk_user_search_result_empty">未找到您要搜索的用户！</string>
    <string name="talk_tip_waiting">请稍候...</string>
    <string name="talk_tip_waiting_take_photo">正在进行压缩计算，请稍候...</string>
    <string name="talk_tip_session_members_max">加入成员失败，可能是已超过最大限30人</string>
    <string name="talk_tip_session_call">请选择邀请的成员</string>
    <string name="talk_calling_offline">呼叫的用户目前不在线!</string>
    <string name="talk_calling_noanswer">呼叫的用户未接听！</string>
    <string name="talk_calling_fail">呼叫建立失败，请稍后再试！</string>
    <string name="talk_calling_server_deny">抱歉，您呼叫的用户屏蔽了陌生人！</string>
    <string name="talk_calling_frequently">抱歉，您呼叫太频繁了！</string>
    <string name="talk_line_busy">您所呼叫的用户正忙，请稍后再试！</string>
    <string name="talk_line_reject">对方拒绝了您的对讲！</string>
    <string name="talk_had_idel">对讲已断开！</string>
    <string name="talk_channel_idle">频道未连接</string>
    <string name="talk_incoming_tip"> 按BACK或MENU键可关闭振铃声音</string>
    <string name="talk_incoming_video_tip">调度台邀请您进行实时视频回传</string>
    <string name="talk_incoming">请求呼入...</string>
    <string name="talk_incoming_video">视频邀请</string>
    <string name="talk_login_account">请输入用户名和密码</string>
    <string name="talk_account_match">网络连接错误！</string>
    <string name="talk_exit">退出</string>
    <string name="talk_change_theme">切换主题</string>
    <string name="talk_login">登录</string>
    <string name="talk_login_cancel">取消</string>
    <string name="talk_logining">正在登录，请稍候...</string>
    <string name="talk_login_loading">正在更新频道信息...</string>
    <string name="talk_login_no_network">网络异常，请稍后...</string>
    <string name="talk_login_sso">正在获取鉴权信息...</string>
    <string name="talk_login_retry">重新登录</string>
    <string name="talk_login_fail">登录失败，请检查您的网络是否可用！</string>
    <string name="talk_login_fail_sso">获取鉴权信息失败，请手动登录！</string>
    <string name="talk_login_failed_invalid">此账号无效！</string>
    <string name="talk_input_pwd">密码</string>
    <string name="talk_input_id">帐号/手机号码</string>
    <string name="talk_tip_operation_fast">您的操作过于频繁！</string>
    <string name="talk_user_login">用户登录</string>
    <string name="talk_close">关闭</string>
    <string name="talk_channel_attach_tip">选择一个频道，作为下次登陆默认显示的频道</string>
    <string name="talk_channel_try">重新连接</string>
    <string name="talk_channel_select">选择频道</string>
    <string name="talk_channel_build_fail">频道连接失败</string>
    <string name="talk_channel_building">正在连接频道，请稍候…</string>
    <string name="talk_channel_get_wait">频道列表加载中，请稍候...</string>
    <string name="talk_channel_member_delete">确认删除选中的成员？</string>
    <string name="talk_exit_channel">断开频道</string>
    <string name="talk_ok">确认</string>
    <string name="talk_no">取消</string>
    <string name="talk_old_pwd">原密码</string>
    <string name="talk_new_pwd">新密码</string>
    <string name="talk_new_pwd_confirm">确认新密码</string>
    <string name="talk_show_password">显示密码</string>
    <string name="pwd_change_format">请输入6~15位数字或字母</string>
    <string name="talk_app_baidumap">百度地图</string>
    <string name="talk_app_amap">高德地图</string>
    <string name="talk_app_map_tip">使用以下方式得到路线</string>
    <string name="talk_ptt_broadcast_idle">发起广播呼叫</string>
    <string name="talk_preset_group">预设组</string>
    <string name="more_port_status">终端状态</string>
    <string name="port_model">终端型号:</string>
    <string name="port_network">网络:</string>
    <string name="port_signal_strength">信号强度:</string>
    <string name="port_mobile_net_model">网络类型:</string>
    <string name="port_mobile_net_status">终端状态:</string>
    <string name="phone_number">本机号码:</string>
    <string name="imei_info">设备IMEI:</string>
    <string name="serial_number_info">序列号:</string>
</resources>