<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingTop="25dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/talk_tools_call_center_confirm"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/call_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioAdmin"
                android:text="@string/talk_tools_call_center_admin"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioAttendence"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/talk_tools_call_center_attendence" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#d2d2d2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:background="@drawable/bg_bottom_radius"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/talk_no"
            android:textColor="#282828"
            android:textSize="15.5sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#d2d2d2" />

        <Button
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/talk_ok"
            android:textColor="#282828"
            android:textSize="15.5sp" />
    </LinearLayout>

</LinearLayout>