<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/talk_layout_session_member"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?theme_sider_bg"
    android:orientation="horizontal" >

    <!-- 修改密码 -->

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <include layout="@layout/include_main_header" />

        <RelativeLayout
            android:id="@+id/layout_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/layout_bottom"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/talk_lv_ipocid"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?theme_sider_title_bg"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dip" >

                        <TextView
                            android:layout_width="90dip"
                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dip"
                            android:text="@string/talk_old_pwd"
                            android:textColor="#787878"
                            android:textSize="16dip" />

                        <EditText
                            android:id="@+id/old_password"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:maxLength="15"
                            android:paddingLeft="10dip"
                            android:password="true"
                            android:textColor="#282828"
                            android:textSize="16dip" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@drawable/dicider_line2" />

                    <LinearLayout
                        android:id="@+id/talk_lv_password_new"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?theme_sider_title_bg"
                        android:gravity="center_vertical"
                        android:padding="10dip" >

                        <TextView
                            android:layout_width="90dip"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dip"
                            android:text="@string/talk_new_pwd"
                            android:textColor="#787878"
                            android:textSize="16dip" />

                        <EditText
                            android:id="@+id/new_password"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:hint="@string/pwd_change_format"
                            android:maxLength="15"
                            android:paddingLeft="10dip"
                            android:password="true"
                            android:singleLine="true"
                            android:textColor="#282828"
                            android:textSize="16dip" />
                        
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@drawable/dicider_line2" />

                    <LinearLayout
                        android:id="@+id/talk_lv_password_confirm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?theme_sider_title_bg"
                        android:gravity="center_vertical"
                        android:padding="10dip" >

                        <TextView
                            android:layout_width="90dip"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dip"
                            android:text="@string/talk_new_pwd_confirm"
                            android:textColor="#787878"
                            android:textSize="16dip" />

                        <EditText
                            android:id="@+id/new_password_confirm"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:hint="@string/pwd_change_format"
                            android:maxLength="15"
                            android:paddingLeft="10dip"
                            android:password="true"
                            android:singleLine="true"
                            android:textColor="#282828"
                            android:textSize="16dip" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@drawable/dicider_line2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="240dp"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="5dip"
                    android:button="?theme_btn_check"
                    android:paddingLeft="5dip"
                    android:text="@string/talk_show_password"
                    android:textColor="#BBBBBB" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="280dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>