<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/talk_lv_member_all"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/divider_line"
        android:dividerHeight="0.5dp"
        android:headerDividersEnabled="false"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/serach_pannel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:clickable="false" >

            <EditText
                android:id="@+id/et_search"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/selector_member_search_form"
                android:hint="输入关键字搜索成员"
                android:padding="5dp"
                android:textColor="#dfffffff"
                android:textColorHint="#b3ffffff"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_member_search" />
        </FrameLayout>

     <!--   <Button
            android:id="@+id/btn_search"
            android:visibility="gone"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_btn_send"
            android:enabled="false"
            android:text="搜索"
            android:textColor="#dfffffff" />  -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ptt_broadcast_panel"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/talk_ptt_broadcast_idle"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:contentDescription="@string/app_name_cmcc"
            android:src="@drawable/btn_enter_white" />
    </LinearLayout>

    <View
        android:id="@+id/v_ptt_broadcast"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider3"
        android:textColor="?theme_color_text1" />

    <LinearLayout
        android:id="@+id/preset_group_pannel"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/talk_preset_group"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:contentDescription="@string/app_name_cmcc"
            android:src="@drawable/btn_enter_white" />
    </LinearLayout>

    <View
        android:id="@+id/v_preset_group"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider3"
        android:textColor="#ff00ff" />



</LinearLayout>